# epicore

./: CHANGELOG.md  LICENSE  README.md  environment.yml  epicore_main.py  params.yaml  plateau_main.py  pyproject.toml  report.html  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml  testrelease.yaml  update_version.yml
epicore_utils/: epicore_main.py
epicore_utils/modules/: compute_cores.py  locserver.py  map_result.py  parse_input.py  visualize_protein.py
tests/: epicore_test.py  evidence_file.csv  evidence_file_cohort.csv  evidence_file_five.csv  evidence_file_included.csv  evidence_file_lengthlim.csv  evidence_file_modifications.csv  evidence_file_seven.csv  evidence_file_smallpeps.csv  included_test.csv  large_evidence.csv  large_evidence_result.csv  large_evidence_result.tsv  minimal_landscape_evidence.csv  proteome.fasta  result_file.csv  result_five.csv  result_included.csv  result_lengthlim.csv  result_min_landscape.csv  result_one.csv  result_seven.csv  result_smallpeps.csv  result_strict.csv  result_three.csv  result_two.csv  results_four.csv
